--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,11 +2,15 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-size:   16px !default;
-$base-font-weight: 400 !default;
-$small-font-size:  $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$common-font-family:    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family:      "Source Sans Pro", $common-font-family;
+$header-font-family:    "Lato", $common-font-family;
+$monospace-font-family: "Source Code Pro", monospace;
+$base-font-size:        16px !default;
+$monospace-font-size:   14px !default;
+$base-font-weight:      400 !default;
+$small-font-size:       $base-font-size * 0.875 !default;
+$base-line-height:      1.5 !default;
 
 $spacing-unit:     30px !default;
 
