--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -94,6 +94,7 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
+  font-family: $header-font-family;
   font-weight: $base-font-weight;
 }
 
@@ -148,7 +149,8 @@ blockquote {
  */
 pre,
 code {
-  @include relative-font-size(0.9375);
+  font-family: $monospace-font-family;
+  @include relative-font-size(0.9);
   border: 1px solid $grey-color-light;
   border-radius: 3px;
   background-color: #eef;
@@ -166,6 +168,18 @@ pre {
     border: 0;
     padding-right: 0;
     padding-left: 0;
+  }
+}
+
+
+
+.highlight {
+  border-radius: 3px;
+
+  pre,
+  code {
+    font-size: $monospace-font-size;
+    background-color: transparent;
   }
 }
 
@@ -214,7 +228,7 @@ pre {
     display: inline-block;
     fill: #{$grey-color};
     padding-right: 5px;
-    vertical-align: text-top;
+    vertical-align: middle;
 }
 
 .social-media-list {
