Update minima files to version 2.5.0
https://github.com/jekyll/minima/tree/v2.5.0

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,14 +2,11 @@
 
 // Define defaults for each variable.
 
-$base-font-family:      "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$header-font-family:    "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$monospace-font-family: "Source Code Pro", monospace;
-$base-font-size:        16px !default;
-$monospace-font-size:   14px !default;
-$base-font-weight:      400 !default;
-$small-font-size:       $base-font-size * 0.875 !default;
-$base-line-height:      1.5 !default;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-size:   16px !default;
+$base-font-weight: 400 !default;
+$small-font-size:  $base-font-size * 0.875 !default;
+$base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
@@ -20,6 +17,8 @@ $brand-color:      #2a7ae2 !default;
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
+
+$table-text-align: left !default;
 
 // Width of the content area
 $content-width:    800px !default;
