--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,6 +2,7 @@
  * Site header
  */
 .site-header {
+  border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
 
@@ -10,7 +11,6 @@
 }
 
 .site-title {
-  font-family: $header-font-family;
   @include relative-font-size(1.625);
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
@@ -21,10 +21,6 @@
   &,
   &:visited {
     color: $grey-color-dark;
-  }
-
-  &:hover {
-    text-decoration: none;
   }
 }
 
@@ -77,7 +73,7 @@
       padding-top: 10px;
       text-align: center;
 
-      > svg path {
+      > svg {
         fill: $grey-color-dark;
       }
     }
@@ -119,6 +115,7 @@
   margin-bottom: $spacing-unit / 2;
 }
 
+.contact-list,
 .social-media-list {
   list-style: none;
   margin-left: 0;
@@ -138,13 +135,18 @@
 }
 
 .footer-col-1 {
-  width: -webkit-calc(30% - (#{$spacing-unit} / 2));
-  width:         calc(30% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
+  width:         calc(35% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
-  width: -webkit-calc(70% - (#{$spacing-unit} / 2));
-  width:         calc(70% - (#{$spacing-unit} / 2));
+  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
+  width:         calc(20% - (#{$spacing-unit} / 2));
+}
+
+.footer-col-3 {
+  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
+  width:         calc(45% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
@@ -175,10 +177,15 @@
  */
 .page-content {
   padding: $spacing-unit 0;
+  flex: 1;
 }
 
 .page-heading {
-  @include relative-font-size(1.25);
+  @include relative-font-size(2);
+}
+
+.post-list-heading {
+  @include relative-font-size(1.75);
 }
 
 .post-list {
