--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,13 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
-      <div class="footer-col">
+      <div class="footer-col footer-col-1">
         {%- include social.html -%}
+      </div>
+
+      <div class="footer-col footer-col-2">
+        <p>Copyright © {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
+        <p>All source code included in the posts is licensed under the <a href="https://github.com/juliangrosshauser/juliangrosshauser.github.io/blob/master/LICENSE">MIT license</a>, unless otherwise stated.</p>
       </div>
     </div>
 
