--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -152,7 +152,7 @@ code {
   font-family: $monospace-font-family;
   @include relative-font-size(0.9);
   border: 1px solid $grey-color-light;
-  border-radius: 3px;
+  border-radius: 5px;
   background-color: #eef;
 }
 
@@ -161,7 +161,8 @@ code {
 }
 
 pre {
-  padding: 8px 12px;
+  margin: 30px 0;
+  padding: 20px 25px;
   overflow-x: auto;
 
   > code {
@@ -174,7 +175,7 @@ pre {
 
 
 .highlight {
-  border-radius: 3px;
+  border-radius: 10px;
 
   pre,
   code {
