--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -3,19 +3,20 @@
  */
 .site-header {
   border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 2.5;
+  min-height: $spacing-unit * 3;
+  margin-bottom: 30px;
 
   // Positioning context for the mobile navigation icon
   position: relative;
 
   .wrapper {
-    margin-top: 11px;
+    margin-top: 18px;
   }
 }
 
 .site-title {
   font-family: $header-font-family;
-  @include relative-font-size(1.625);
+  @include relative-font-size(1.8);
   font-weight: 300;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
@@ -33,7 +34,7 @@
 
 .site-title-img {
     float: left;
-    margin-right: 15px;
+    margin-right: 25px;
     border: 1px solid $grey-color;
     border-radius: 50%;
 }
@@ -143,6 +144,7 @@
   @include relative-font-size(2.625);
   letter-spacing: -1px;
   line-height: 1;
+  margin-bottom: 10px;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
