--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -11,7 +11,11 @@
 
   .wrapper {
     margin-top: 18px;
+
+    @include media-query($on-laptop) {
+      text-align: center;
   }
+}
 }
 
 .site-title {
@@ -33,10 +37,14 @@
 }
 
 .site-title-img {
-    float: left;
-    margin-right: 25px;
+    margin-right: 20px;
+    margin-bottom: 14px;
     border: 1px solid $grey-color;
     border-radius: 50%;
+
+    @include media-query($on-laptop) {
+      margin-right: 10px;
+    }
 }
 
 
